--- a/index.html
+++ b/index.html
@@ -8,7 +8,34 @@
     <link rel="stylesheet" href="style/css/style.css"> <!--c'est le :ien qui relue html et css-->
 </head>
 <body>
-    <h1> ceci est ma premiére  application!</h1>
+    <script>
+        console.log("Hello World" );
+    </script>
+    <script language="javascript">
+
+        alert("Hello there random user ! :)")
+        alert("Ceci est une boîte d'alerte");
+        var visitorName = prompt("What's your name : " )
+        console.log(visitorName)
+        var isCoolWithIt = confirm("Are you ok with it?" )
+var a = 2 + 2 // Je suis un commentaire sur une seule ligne
+
+/*
+
+Et je suis un commentaire sur plusieurs lignes,
+
+Tout ce qui se trouve ici sera ignoré par l'interpréteur Javascript.
+
+Javascript.
+
+var b = 3 + 3
+
+*/
+alert("ceci est un test")
+        </script>
+        <script src="myScriptFile.js"></script>
+        
+    <h1> Ceci est ma premiére  application!</h1>
          <!-- ceci est un commentaire-->
           <p>mouhamed <br>tall <br>20 <br>eleve</p> 
           <b>test</b><br><i>test</i><br><small>test</small><br><del>test</del>
