--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@ var b = 3 + 3
 
 */
 alert("ceci est un test")
+console.log(typeof(true)) // imprime un booléen
+console.log(typeof(9000)) // imprime un nombre
+console.log(typeof("Übermensch" )) // imprime une chaîne de caractères
+console.log(typeof(anUndefinedVar)) // imprime undefined
+console.log(typeof(null)) // imprime l'objet
+var person1 = {
+	name : "foulan",
+	âge : 9000,
+	isStudent : true
+}
+console.log(5+2)
+// 7
+var name ="Lucy"
+console.log(`Yo, ${name}!`) 
         </script>
         <script src="myScriptFile.js"></script>
         
