--- a/index.html
+++ b/index.html
@@ -7,148 +7,176 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="style/css/style.css" />
     <!--c'est le lien qui relie html et css-->
+    
   </head>
 
   <body>
     <header>
       <nav>
-        <ul>
-          <li>
-            <a href="">Acceuil</a>
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="" class="menu-link">
+              <span class="icon">🏠</span> Accueil
+            </a>
           </li>
-          <li>
-            <a href="">Contact</a>
+          <li class="menu-item">
+            <a href="" class="menu-link">
+              <span class="icon">📞</span> Contact
+            </a>
           </li>
-          <li>
-            <a href="">A propros</a>
+          <li class="menu-item">
+            <a href="" class="menu-link">
+              <span class="icon">ℹ️</span> À propos
+            </a>
           </li>
         </ul>
       </nav>
     </header>
-   <section>
-    <h1>About</h1>
-<p>Mohamed Alabi est un boxeur passionné qui s'entraîne depuis 8 ans. Il a découvert la boxe à l'âge de 20 ans et s'est immédiatement pris de passion pour ce sport. Grâce à sa détermination et à son travail acharné, il a participé à plusieurs compétitions régionales et nationales, remportant notamment le titre de champion régional en 2022.</p>
-   </section>
-   <section>
-<h2>Work</h2>
-<p>Mohamed Alabi est un boxeur passionné et dévoué, spécialisé dans les compétitions régionales et nationales. Il s'entraîne quotidiennement pour améliorer sa technique, sa condition physique et sa stratégie. En dehors de ses performances sportives, il joue également un rôle de mentor en guidant les jeunes boxeurs de son club, tout en promouvant la boxe comme un moyen de développement personnel et de discipline.</p>
-   </section>
-   <section>
-    <h2>Résumé</h2>
-    <p>Mohamed Alabi, 28 ans, est un boxeur passionné avec 8 ans d'expérience. Champion régional en 2022, il s'entraîne intensément pour exceller dans son sport. En parallèle, il mentor des jeunes boxeurs et promeut la boxe comme un outil de discipline et d'épanouissement personnel. Son ambition : devenir champion national. </p>
-   </section>
-   <section>
-    <h2>contact</h2>
-   </section>
-   <form>
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname"><br>
-    <label for="contact">Contact:</label><br>
-    <input form="text"><br><label for="username">Username:</label><br>
-    <input type="text" id="username" name="username"><br>
-    <label for="pwd">Password:</label><br>
-    <input type="password" id="pwd" name="pwd"><br>
-    <label for="email">Enter your email:</label><br>
-    <input type="email" id="email" name="email">
-   </form>
-   <img src="téléchargement.jpg" alt="">
-   <ol>
-    <li>Boxe</li>
-    <li>Entrainement</li>
-    <li>Milk</li>
-   </ol>
-   <ol type="1">
-    <li>Boxe</li>
-    <li>Entrainement</li>
-    <li>Milk</li>
-  </ol>
-  <ol type="A">
-    <li>Boxe</li>
-    <li>Entrainement</li>
-    <li>Milk</li>
-  </ol>
-  <ol type="a">
-    <li>Boxe</li>
-    <li>Entrainement</li>
-    <li>Milk</li>
-  </ol>
-  <ol type="I">
-    <li>Boxe</li>
-    <li>Entrainement</li>
-    <li>Milk</li>
-  </ol>
-  <ol start="50">
-    <li>Boxe</li>
-    <li>Entrainement</li>
-    <li>Milk</li>
-  </ol>
-  <ol>
-    <li>Boxe</li>
-    <li>Entrainement
-      <ol>
-        <li>Milk</li>
-        <li>Meat</li>
-      </ol>
-    </li>
-    <li>Milk</li>
-  </ol>
-  <table>
-    <tr>
-      <th>Company</th>
-      <th>Contact</th>
-      <th>Country</th>
-    </tr>
-    <tr>
-      <td>Sicap Boxing Club</td>
-      <td>Liberté 6 nord extension</td>
-      <td>Sénégal</td>
-    </tr>
-    <tr>
-      <td>Olympique Club</td>
-      <td>Cheikh Ahmadou Kane</td>
-      <td>Sénégal</td>
-    </tr>
-  </table>
-  <table>
-    <tr>
-      <td>Cheikh</td>
-      <td>Mansour</td>
-      <td>Elimane</td>
-    </tr>
-  </table>
-  <table>
-    <tr>
-      <td>Cheikh</td>
-      <td>Youssou</td>
-      <td>Modou</td>
-    </tr>
-    <tr>
-      <td>30</td>
-      <td>28</td>
-      <td>32</td>
-    </tr>
-  </table>  
-  <table>
-    <tr>
-      <th>Person 1</th>
-      <th>Person 2</th>
-      <th>Person 3</th>
-    </tr>
-    <tr>
-      <td>André</td>
-      <td>Samba</td>
-      <td>Ibou</td>
-    </tr>
-    <tr>
-      <td>33</td>
-      <td>40</td>
-      <td>10</td>
-    </tr>
-  </table>
-  <Footer>
-    <p>Copyright 2025 MonSiteWeb.Tous droits réservés.</p>
-  </Footer>
+    </header>
+    <section>
+      <h1>About</h1>
+      <p>
+        Mohamed Alabi est un boxeur passionné qui s'entraîne depuis 8 ans. Il a
+        découvert la boxe à l'âge de 20 ans et s'est immédiatement pris de
+        passion pour ce sport. Grâce à sa détermination et à son travail
+        acharné, il a participé à plusieurs compétitions régionales et
+        nationales, remportant notamment le titre de champion régional en 2022.
+      </p>
+    </section>
+    <section>
+      <h2>Work</h2>
+      <p>
+        Mohamed Alabi est un boxeur passionné et dévoué, spécialisé dans les
+        compétitions régionales et nationales. Il s'entraîne quotidiennement
+        pour améliorer sa technique, sa condition physique et sa stratégie. En
+        dehors de ses performances sportives, il joue également un rôle de
+        mentor en guidant les jeunes boxeurs de son club, tout en promouvant la
+        boxe comme un moyen de développement personnel et de discipline.
+      </p>
+    </section>
+    <section>
+      <h2>Résumé</h2>
+      <p>
+        Mohamed Alabi, 28 ans, est un boxeur passionné avec 8 ans d'expérience.
+        Champion régional en 2022, il s'entraîne intensément pour exceller dans
+        son sport. En parallèle, il mentor des jeunes boxeurs et promeut la boxe
+        comme un outil de discipline et d'épanouissement personnel. Son ambition
+        : devenir champion national.
+      </p>
+    </section>
+    <section>
+      <h2>contact</h2>
+    </section>
+    <form>
+      <label for="fname">First name:</label><br />
+      <input type="text" id="fname" name="fname" /><br />
+      <label for="lname">Last name:</label><br />
+      <input type="text" id="lname" name="lname" /><br />
+      <label for="contact">Contact:</label><br />
+      <input form="text" /><br /><label for="username">Username:</label><br />
+      <input type="text" id="username" name="username" /><br />
+      <label for="pwd">Password:</label><br />
+      <input type="password" id="pwd" name="pwd" /><br />
+      <label for="email">Enter your email:</label><br />
+      <input type="email" id="email" name="email" />
+    </form>
+    <img src="téléchargement.jpg" alt="" />
+    <ol>
+      <li>Boxe</li>
+      <li>Entrainement</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="1">
+      <li>Boxe</li>
+      <li>Entrainement</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="A">
+      <li>Boxe</li>
+      <li>Entrainement</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="a">
+      <li>Boxe</li>
+      <li>Entrainement</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="I">
+      <li>Boxe</li>
+      <li>Entrainement</li>
+      <li>Milk</li>
+    </ol>
+    <ol start="50">
+      <li>Boxe</li>
+      <li>Entrainement</li>
+      <li>Milk</li>
+    </ol>
+    <ol>
+      <li>Boxe</li>
+      <li>
+        Entrainement
+        <ol>
+          <li>Milk</li>
+          <li>Meat</li>
+        </ol>
+      </li>
+      <li>Milk</li>
+    </ol>
+    <table>
+      <tr>
+        <th>Company</th>
+        <th>Contact</th>
+        <th>Country</th>
+      </tr>
+      <tr>
+        <td>Sicap Boxing Club</td>
+        <td>Liberté 6 nord extension</td>
+        <td>Sénégal</td>
+      </tr>
+      <tr>
+        <td>Olympique Club</td>
+        <td>Cheikh Ahmadou Kane</td>
+        <td>Sénégal</td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <td>Cheikh</td>
+        <td>Mansour</td>
+        <td>Elimane</td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <td>Cheikh</td>
+        <td>Youssou</td>
+        <td>Modou</td>
+      </tr>
+      <tr>
+        <td>30</td>
+        <td>28</td>
+        <td>32</td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <th>Person 1</th>
+        <th>Person 2</th>
+        <th>Person 3</th>
+      </tr>
+      <tr>
+        <td>André</td>
+        <td>Samba</td>
+        <td>Ibou</td>
+      </tr>
+      <tr>
+        <td>33</td>
+        <td>40</td>
+        <td>10</td>
+      </tr>
+    </table>
+    <footer>
+      <p>Copyright 2025 MonSiteWeb.Tous droits réservés.</p>
+    </footer>
   </body>
 </html>
